Fixed clipped qr code popover in tenderfoot theme

--- a/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
@@ -366,6 +366,10 @@ img.add-individual {
     width: 15px;
 }
 
+#individual-intro {
+    overflow: unset;
+}
+
 /* ------------------------------------------------->  */
 /* TOOLTIP  ---------------------------------------->  */
 /* ------------------------------------------------->  */
